[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdg-img = "0.4.2"
fdg-sim = "0.9.1"
itertools = "0.12.0"
memoize = "0.4.1"
num = "0.4.1"
priority-queue = "1.3.2"
regex = "1.10.2"
z3 = "0.12.1"
